--- a/package.json
+++ b/package.json
@@ -18,18 +18,20 @@
     "type": "git",
     "url": "https://github.com/openshift/origin-server"
   },
-
   "engines": {
     "node": ">= 0.6.0",
     "npm": ">= 1.0.0"
   },
-
   "dependencies": {
-    "express": "~3.4.4"
+    "body-parser": "^1.14.1",
+    "bower": "^1.6.5",
+    "express": "~3.4.4",
+    "mongoose": "^4.2.8",
+    "node-uuid": "^1.4.3",
+    "q": "^1.4.1"
   },
   "devDependencies": {},
   "bundleDependencies": [],
-
   "private": true,
   "main": "server.js"
 }
